# rust_grpc_boilerplate

./: .env  .gitignore  Cargo.toml  build.rs  docker-compose.yml
migration/: Cargo.toml
migration/src/: lib.rs  m20240209_135152_user.rs  m20240209_135644_shift.rs  m20240213_103957_group.rs
proto/: auth.proto  helloworld.proto
src/: infrastructure.rs  main.rs  server.rs
src/infrastructure/: error.rs  infrastructure.rs
src/infrastructure/entities/: group.rs  mod.rs  prelude.rs  shift.rs  user.rs
src/presentation/: presentation.rs
src/usecase/: usecase.rs
web/: .env  package-lock.json  package.json
web/services/: helloworld_connectweb.ts  helloworld_pb.ts
web/src/components/: index.ts
web/src/components/CreateAccount/CreateAccountForm/: CreateAccountFrom.tsx  lib.ts
web/src/components/CreateAccountForm/: CreateAccountFrom.tsx  index.ts  lib.ts
web/src/components/Home/ConfirmCalender/: ConfirmCalender.tsx  Converter.ts  index.ts
web/src/components/Home/CreateShiftCalender/: CreateShiftCalender.tsx  index.ts
web/src/components/Home/CreateShiftModal/: CreateShiftModal.tsx  index.ts  lib.ts
web/src/components/Home/DeleteModal/: DeleteModal.tsx
web/src/components/Home/EventDeleteModal/: EventDeleteModal.tsx
web/src/components/Home/EventUpdateModal/: EventUpdateModal.tsx
web/src/components/Index/AppBar/: AppBar.tsx
web/src/components/Index/SideBar/: SideBar.tsx
web/src/components/LoginForm/: LoginForm.tsx  lib.ts
web/src/components/SideBar/: SideBar.tsx
web/src/pages/: _app.tsx  createNewAccount.tsx  index.tsx  login.tsx
web/src/pages/Home/: index.tsx
web/src/pages/api/: ClientProvider.ts  CokiesContext.tsx
(+2 files in other folders)
